# specforge

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json
.github/workflows/scripts/: create-release-packages.ps1  create-release-packages.sh
docs/: README.md  index.md  installation.md  local-development.md  quickstart.md  upgrade.md  workflows.md
memory/: architecture-registry.md  constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/forge_cli/: __init__.py
templates/: checklist-template.md  feature-template.md  idea-template.md  module-claude-template.md  plan-template.md  spec-template.md  specs-context-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  breakdown.md  change.md  checklist.md  clarify.md  fix.md  idea.md  implement.md  learn.md  merge.md  plan.md  review.md  semantic-anchors.md  setup-agents.md  setup-constitution.md  setup-docs.md  setup-mcp.md  setup-skills.md  setup.md  specify.md  tasks.md  taskstoissues.md  validate.md
templates/mcp/project-server/: README.md
templates/mcp/project-server/src/: config.ts  index.ts
