[project]
name = "forge-cli"
version = "0.0.25"
description = "SpecForge CLI - An enhanced toolkit for Spec-Driven Development with advanced quality analysis, modular workflows, and intelligent code generation."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
forge = "forge_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_cli"]

# Include bundled templates and scripts in the package
[tool.hatch.build.targets.wheel.force-include]
"templates" = "forge_cli/bundled/templates"
"scripts" = "forge_cli/bundled/scripts"
"memory" = "forge_cli/bundled/memory"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
    "/scripts",
    "/memory",
]

